--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial;
-    color: darkgrey;
+    color: #a9a9a9;
     flex-direction: column;
 }
 
@@ -21,8 +21,8 @@ body {
 .nav-bar {
     width: 100%;
     position: sticky;
-    background-color: white;
-    box-shadow: rgb(0 0 0 / 12%) 0 1px 8px;
+    background-color: #fff;
+    box-shadow: #0000001f 0 1px 8px;
     display: flex;
     justify-content: space-between;
 }
@@ -50,7 +50,7 @@ body {
     margin: 5px;
     border-radius: 20px;
     padding: 10px;
-    box-shadow: rgb(0 0 0 / 12%) 0 1px 8px;
+    box-shadow: #0000001f 0 1px 8px;
 }
 
 .card img {
@@ -59,12 +59,12 @@ body {
 
 .footer {
     width: 100%;
-    background-color: lightcoral;
+    background-color: #f08080;
     position:absolute;
     bottom:0;
     text-align: center;
     padding: 30px 0;
-    color: white;
+    color: #fff;
 }
 
 .review-card {
@@ -79,7 +79,7 @@ body {
 .break {
     height: 1px;
     width: 90%;
-    background-color: coral;
+    background-color: #ff7f50;
 }
 
 button {
